--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,39 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-        <display-name>UniEvent</display-name>
-
-
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>LoginServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>RegisterServlet</servlet-name>
-        <servlet-class>RegisterServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/RegisterServlet</url-pattern>
-    </servlet-mapping>
+<web-app xmlns="[http://xmlns.jcp.org/xml/ns/javaee](http://xmlns.jcp.org/xml/ns/javaee)"
+         xmlns:xsi="[http://www.w3.org/2001/XMLSchema-instance](http://www.w3.org/2001/XMLSchema-instance)"
+         xsi:schemaLocation="[http://xmlns.jcp.org/xml/ns/javaee](http://xmlns.jcp.org/xml/ns/javaee) [http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd](http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd)"
+         version="4.0">
+    <display-name>UniEvent</display-name>
     
-    <servlet>
-        <servlet-name>DashboardControllerServlet</servlet-name>
-        <servlet-class>controller.DashboardControllerServlet</servlet-class>
-    </servlet>
+    <!-- The welcome file to show when accessing the root URL -->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
-    <servlet-mapping>
-        <servlet-name>DashboardControllerServlet</servlet-name>
-        <url-pattern>/studentDashboard</url-pattern>
-    </servlet-mapping>
-
+    <!-- 
+      [FIX] Removed all <servlet> and <servlet-mapping> definitions.
+      Modern Java EE applications prefer using the @WebServlet annotation directly in the servlet class.
+      Your existing servlets (LoginServlet, RegisterServlet, all Management Servlets, etc.) 
+      already use this annotation. Keeping mappings here and in the annotations can lead to conflicts 
+      and makes the project harder to maintain. The application server will automatically detect and map
+      the servlets from their annotations.
+    -->
+    
 </web-app>
